--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -20,6 +20,6 @@
       "**/CVS": true
    },
    "files.autoSave": "afterDelay",
-   "workbench.colorTheme": "Default Dark+",
+   "workbench.colorTheme": "Default Light+",
    "editor.defaultFormatter": "HookyQR.beautify"
 }
