--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -25,8 +25,11 @@
    "cSpell.words": [
       "balsamiq",
       "colours",
+      "Haettenschweiler",
       "Matteson",
       "Pexels",
+      "posititon",
+      "Swal",
       "Tinypng",
       "Typographics",
       "WIREFRAMS"
